Bug 374769 - There is no more keyboard shortcut for editing the task/event category combobox or achievement slider element
Summary: There is no more keyboard shortcut for editing the task/event category combob...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 5.4.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-08 19:33 UTC by Alexandre Bonneau
Modified: 2017-07-07 11:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bonneau 2017-01-08 19:33:20 UTC
I reopen the bug #305207 that has been closed for lack of activity :

"Since a few korganizer version, to be exact since the last major ui change in the incidence editor, you can't use any keyboard shortcut to select the category combobox or the achievement slider (eg. on the French configuration alt+i for accessing the title filed, alt+l for the place (cf. screencapture)).

Reproducible: Always

Steps to Reproduce:
1. Add a new task
2. using only your keyboard, try to directly access the category combobox
Actual Results:  
you can't.

Expected Results:  
Being able to use something like alt+c to put the focus on the category combobox"
Comment 1 Denis Kurz 2017-01-09 17:00:03 UTC
Please note: "since the last major ui change" in the description refers to KOrganizer 4.13.

Still no shortcuts in 16.12.0 / 5.4.0
Comment 2 Laurent Montel 2017-07-07 11:56:52 UTC
Git commit ff7d17edea691b170100170a31536e564dc514ba by Montel Laurent.
Committed on 07/07/2017 at 11:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 374769 - There is no more keyboard shortcut for editing the task/event category combobox or achievement slider element
FIXED-IN: 5.6.0

M  +1    -1    src/incidencedialog.cpp
M  +29   -23   src/ui/dialogdesktop.ui

https://commits.kde.org/incidenceeditor/ff7d17edea691b170100170a31536e564dc514ba