Fix Bug 374769 - There is no more keyboard shortcut for editing the task/event category combobox or achievement slider element

BUG: 374769
FIXED-IN: 5.6.0